# cnfgen

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CREDITS.org  LICENSE  MANIFEST.in  Makefile  PyPI.md  README.org  cgprof.py  cnfgen.py  conftest.py  dimacsshuffle.py  dimacstransform.py  kth2dimacs.py  profile.py  pyproject.toml  pytest.ini  requirements.txt  reshuffle.py  rtd-requirements.txt  setup.py  shufflereference.py  test.py
.ropeproject/: globalnames  objectdb
cnf/: __init__.py  cnf.py  lifting.py
cnfformula/: __init__.py  __init__.pyo  cmdline.py  cnf.py  cnf.pyo  cnfgen.py  csp.py  families.py  families.pyo  graphs.py  graphs.pyo  info.py  lifting.py  lifting.pyo  opb.py  prjdata.py  transformation.py  utils.py  variables.py
cnfgen/: __init__.py  basecnf.py  cmdline.py  cnf.py  cnfio.py  cnfshuffle.py  cnftransform.py  counting_helpers.py  cpls_helper.py  dimacs_helpers.py  formula_helpers.py  graph_cmdline.py  graph_helpers.py  graphs.py  info.py  kthlist2pebbling.py  linear.py  localtypes.py  main.py  mapping.py  msg.py  ordering_helpers.py  pebbling_helpers.py  php_helpers.py  pitfall_helpers.py  simple_helpers.py  transformation_helpers.py  variables.py
docs/: Makefile  addfamily.rst  buildcnf.rst  cnfformula.cmdline.rst  cnfformula.cnf.rst  cnfformula.cnfgen.rst  cnfformula.families.cliquecoloring.rst  cnfformula.families.coloring.rst  cnfformula.families.counting.rst  cnfformula.families.dominatingset.rst  cnfformula.families.graphisomorphism.rst  cnfformula.families.ordering.rst  cnfformula.families.pebbling.rst  cnfformula.families.rst  (+95 more)
(+187 files in other folders)
